added background and started styling index html

--- a/static/index.html
+++ b/static/index.html
@@ -1,17 +1,21 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Bingo Spoon 3</title>
-    <script src="https://cdn.socket.io/4.7.2/socket.io.min.js"></script>
-    <script type="module" src="script/index.js"></script>
-</head>
-<body>
-    <form id="loginForm">
-        <label for="logiName">Pseudo :</label>
-        <input type="text" id="loginName" required placeholder="Nom">
-        <input type="submit" value="Valider" />
-    </form>
-</body>
+<html lang="fr">
+    <head>
+        <meta charset="UTF-8">
+        <title>Bingo Spoon 3</title>
+        <link rel="stylesheet" href="css/global.css">
+        <script src="https://cdn.socket.io/4.7.2/socket.io.min.js"></script>
+        <script type="module" src="script/index.js"></script>
+    </head>
+    <body>
+        <header>
+            <h1>Bingo Spoon 3</h1>
+        </header>
+        <form id="loginForm">
+            <label for="logiName">Pseudo :</label>
+            <input type="text" id="loginName" required placeholder="Nom">
+            <input type="submit" value="Valider" />
+        </form>
+    </body>
 </html>
 
