--- a/static/index.html
+++ b/static/index.html
@@ -3,9 +3,9 @@
     <head>
         <meta charset="UTF-8">
         <title>Bingo Spoon 3</title>
-        <link rel="stylesheet" href="css/global.css">
+        <link rel="stylesheet" href="../static/css/global.css">
         <script src="https://cdn.socket.io/4.7.2/socket.io.min.js"></script>
-        <script type="module" src="script/index.js"></script>
+        <script type="module" src="../static/script/index.js"></script>
     </head>
     <body>
         <header>
