--- a/static/index.html
+++ b/static/index.html
@@ -5,7 +5,9 @@
         <title>Bingo Spoon 3</title>
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <script src="https://cdn.socket.io/4.7.2/socket.io.min.js"></script>
-        <script type="module" src="../static/script/index.js"></script>
+        <script type="module" src="/static/script/index.js"></script>
+        <link rel="stylesheet" href="/static/css/global.css">
+        <link rel="icon" type="image/png" href="/static/images/favicon.png">
     </head>
     <body>
 
